# Asa

./: README.md
attack-surface-analyzer/: README.md  pyproject.toml
attack-surface-analyzer/src/asa/: __init__.py  cli.py  models.py
attack-surface-analyzer/src/asa/reporters/: html.py  terminal.py
attack-surface-analyzer/src/asa/scanners/: __init__.py  configs.py  dependencies.py  endpoints.py  secrets.py
attack-surface-analyzer/src/attack_surface_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
attack-surface-analyzer/tests/: test_scanners.py
